; ModuleID = '/home/carl/AnghaBench/xLua/build/luajit-2.1.0b2/src/extr_lj_mcode.c_mcode_alloc.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luajit-2.1.0b2/src/extr_lj_mcode.c_mcode_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i64 }

@lj_vm_exit_handler = common dso_local global i64 0, align 8
@LJ_TARGET_JUMPRANGE = common dso_local global i32 0, align 4
@MCPROT_GEN = common dso_local global i32 0, align 4
@LJ_TRERR_MCODEAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.TYPE_7__*, i64)* @mcode_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @mcode_alloc(%struct.TYPE_7__* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %4, align 8
  store i64 %1, i64* %5, align 8
  %11 = load i64, i64* @lj_vm_exit_handler, align 8
  %12 = inttoptr i64 %11 to i8*
  %13 = ptrtoint i8* %12 to i64
  %14 = and i64 %13, -65536
  store i64 %14, i64* %6, align 8
  %15 = load i32, i32* @LJ_TARGET_JUMPRANGE, align 4
  %16 = sub nsw i32 %15, 1
  %17 = shl i32 1, %16
  %18 = sub i32 %17, 2097152
  %19 = zext i32 %18 to i64
  store i64 %19, i64* %7, align 8
  %20 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %21 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %30

24:                                               ; preds = %2
  %25 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %26 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = load i64, i64* %5, align 8
  %29 = sub i64 %27, %28
  br label %31

30:                                               ; preds = %2
  br label %31

31:                                               ; preds = %30, %24
  %32 = phi i64 [ %29, %24 ], [ 0, %30 ]
  store i64 %32, i64* %8, align 8
  store i32 0, i32* %9, align 4
  br label %33

33:                                               ; preds = %98, %31
  %34 = load i32, i32* %9, align 4
  %35 = icmp slt i32 %34, 32
  br i1 %35, label %36, label %101

36:                                               ; preds = %33
  %37 = load i64, i64* %8, align 8
  %38 = inttoptr i64 %37 to i8*
  %39 = call i64 @mcode_validptr(i8* %38)
  %40 = icmp ne i64 %39, 0
  br i1 %40, label %41, label %77

41:                                               ; preds = %36
  %42 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %43 = load i64, i64* %8, align 8
  %44 = load i64, i64* %5, align 8
  %45 = load i32, i32* @MCPROT_GEN, align 4
  %46 = call i8* @mcode_alloc_at(%struct.TYPE_7__* %42, i64 %43, i64 %44, i32 %45)
  store i8* %46, i8** %10, align 8
  %47 = load i8*, i8** %10, align 8
  %48 = call i64 @mcode_validptr(i8* %47)
  %49 = icmp ne i64 %48, 0
  br i1 %49, label %50, label %68

50:                                               ; preds = %41
  %51 = load i8*, i8** %10, align 8
  %52 = ptrtoint i8* %51 to i64
  %53 = load i64, i64* %5, align 8
  %54 = add i64 %52, %53
  %55 = load i64, i64* %6, align 8
  %56 = sub i64 %54, %55
  %57 = load i64, i64* %7, align 8
  %58 = icmp ult i64 %56, %57
  br i1 %58, label %66, label %59

59:                                               ; preds = %50
  %60 = load i64, i64* %6, align 8
  %61 = load i8*, i8** %10, align 8
  %62 = ptrtoint i8* %61 to i64
  %63 = sub i64 %60, %62
  %64 = load i64, i64* %7, align 8
  %65 = icmp ult i64 %63, %64
  br i1 %65, label %66, label %68

66:                                               ; preds = %59, %50
  %67 = load i8*, i8** %10, align 8
  store i8* %67, i8** %3, align 8
  br label %105

68:                                               ; preds = %59, %41
  %69 = load i8*, i8** %10, align 8
  %70 = icmp ne i8* %69, null
  br i1 %70, label %71, label %76

71:                                               ; preds = %68
  %72 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %73 = load i8*, i8** %10, align 8
  %74 = load i64, i64* %5, align 8
  %75 = call i32 @mcode_free(%struct.TYPE_7__* %72, i8* %73, i64 %74)
  br label %76

76:                                               ; preds = %71, %68
  br label %77

77:                                               ; preds = %76, %36
  br label %78

78:                                               ; preds = %84, %77
  %79 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %80 = call i32 @LJ_PRNG_BITS(%struct.TYPE_7__* %79, i32 15)
  %81 = xor i32 30971, %80
  %82 = shl i32 %81, 16
  %83 = sext i32 %82 to i64
  store i64 %83, i64* %8, align 8
  br label %84

84:                                               ; preds = %78
  %85 = load i64, i64* %8, align 8
  %86 = load i64, i64* %5, align 8
  %87 = add i64 %85, %86
  %88 = load i64, i64* %7, align 8
  %89 = icmp ult i64 %87, %88
  %90 = xor i1 %89, true
  br i1 %90, label %78, label %91

91:                                               ; preds = %84
  %92 = load i64, i64* %6, align 8
  %93 = load i64, i64* %8, align 8
  %94 = add i64 %92, %93
  %95 = load i64, i64* %7, align 8
  %96 = lshr i64 %95, 1
  %97 = sub i64 %94, %96
  store i64 %97, i64* %8, align 8
  br label %98

98:                                               ; preds = %91
  %99 = load i32, i32* %9, align 4
  %100 = add nsw i32 %99, 1
  store i32 %100, i32* %9, align 4
  br label %33

101:                                              ; preds = %33
  %102 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %103 = load i32, i32* @LJ_TRERR_MCODEAL, align 4
  %104 = call i32 @lj_trace_err(%struct.TYPE_7__* %102, i32 %103)
  store i8* null, i8** %3, align 8
  br label %105

105:                                              ; preds = %101, %66
  %106 = load i8*, i8** %3, align 8
  ret i8* %106
}

declare dso_local i64 @mcode_validptr(i8*) #1

declare dso_local i8* @mcode_alloc_at(%struct.TYPE_7__*, i64, i64, i32) #1

declare dso_local i32 @mcode_free(%struct.TYPE_7__*, i8*, i64) #1

declare dso_local i32 @LJ_PRNG_BITS(%struct.TYPE_7__*, i32) #1

declare dso_local i32 @lj_trace_err(%struct.TYPE_7__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
